{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 558,
  "lineage": "b0df47a0-d256-6134-4511-f03602a00ebf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicMaster",
            "internal_domain_name_suffix": "gd45vnzomslutmugsbankl1cze.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.10.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpMaster",
                "subnet_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/virtualNetworks/vnet-pozuelo/subnets/subnet-pozuelo"
              }
            ],
            "location": "uksouth",
            "name": "vnicMaster",
            "private_ip_address": "10.0.10.10",
            "private_ip_addresses": [
              "10.0.10.10"
            ],
            "resource_group_name": "rg-pozuelo"
          },
          "dependencies": [
            "azurerm_public_ip.ip_public_master",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicNFS",
            "internal_domain_name_suffix": "gd45vnzomslutmugsbankl1cze.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.10.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpNFS",
                "subnet_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/virtualNetworks/vnet-pozuelo/subnets/subnet-pozuelo"
              }
            ],
            "location": "uksouth",
            "name": "vnicNFS",
            "private_ip_address": "10.0.10.12",
            "private_ip_addresses": [
              "10.0.10.12"
            ],
            "resource_group_name": "rg-pozuelo"
          },
          "dependencies": [
            "azurerm_public_ip.ip_public_nfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicWorker",
            "internal_domain_name_suffix": "gd45vnzomslutmugsbankl1cze.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.10.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpWorker",
                "subnet_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/virtualNetworks/vnet-pozuelo/subnets/subnet-pozuelo"
              }
            ],
            "location": "uksouth",
            "name": "vnicWorker",
            "private_ip_address": "10.0.10.11",
            "private_ip_addresses": [
              "10.0.10.11"
            ],
            "resource_group_name": "rg-pozuelo"
          },
          "dependencies": [
            "azurerm_public_ip.ip_public_worker",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sec_group_association_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicMaster|/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupMaster",
            "network_interface_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicMaster",
            "network_security_group_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupMaster"
          },
          "dependencies": [
            "azurerm_network_interface.nic_master",
            "azurerm_network_security_group.sec_group_master",
            "azurerm_public_ip.ip_public_master",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sec_group_association_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicNFS|/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupNFS",
            "network_interface_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicNFS",
            "network_security_group_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupNFS"
          },
          "dependencies": [
            "azurerm_network_interface.nic_nfs",
            "azurerm_network_security_group.sec_group_nfs",
            "azurerm_public_ip.ip_public_nfs",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sec_group_association_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicWorker|/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupWorker",
            "network_interface_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkInterfaces/vnicWorker",
            "network_security_group_id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupWorker"
          },
          "dependencies": [
            "azurerm_network_interface.nic_worker",
            "azurerm_network_security_group.sec_group_worker",
            "azurerm_public_ip.ip_public_worker",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sec_group_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupMaster",
            "location": "uksouth",
            "name": "secGroupMaster",
            "resource_group_name": "rg-pozuelo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Grafana",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP8080",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Master"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sec_group_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupNFS",
            "location": "uksouth",
            "name": "secGroupNFS",
            "resource_group_name": "rg-pozuelo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "NFS"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sec_group_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/networkSecurityGroups/secGroupWorker",
            "location": "uksouth",
            "name": "secGroupWorker",
            "resource_group_name": "rg-pozuelo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Worker"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip_public_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpMaster",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.19.171",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIpMaster",
            "resource_group_name": "rg-pozuelo",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Master"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip_public_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpNFS",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.19.51",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIpNFS",
            "resource_group_name": "rg-pozuelo",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "NFS"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip_public_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/publicIPAddresses/PublicIpWorker",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.0.19.170",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PublicIpWorker",
            "resource_group_name": "rg-pozuelo",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Worker"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/virtualNetworks/vnet-pozuelo/subnets/subnet-pozuelo",
            "name": "subnet-pozuelo",
            "resource_group_name": "rg-pozuelo",
            "virtual_network_name": "vnet-pozuelo"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b7fafd30-642e-4997-b286-9040d52f62cc",
            "id": "/subscriptions/10398870-f8a7-4284-9317-a78477bd3633/resourceGroups/rg-pozuelo/providers/Microsoft.Network/virtualNetworks/vnet-pozuelo",
            "location": "uksouth",
            "name": "vnet-pozuelo",
            "resource_group_name": "rg-pozuelo"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}